--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "firebase": "^8.2.3",
     "react": "17.0.2",
+    "react_native_mqtt": "^1.3.1",
     "react-native": "0.68.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "sp-react-native-mqtt": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
