--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.smartcampusmaua_app">
-
+  
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+
     
     <application
       android:name=".MainApplication"
@@ -29,6 +31,8 @@
       </activity>
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="GOOGLE_MAPS_API_KEY"/>
+        android:value="@string/GOOGLE_MAPS_API_KEY"
+      />
+      <service android:name="com.voximplant.foregroundservice.VIForegroundService"> </service>
     </application>
 </manifest>
