--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/native": "^6.0.10",
@@ -20,10 +21,10 @@
     "axios": "^0.27.2",
     "firebase": "^8.2.3",
     "react": "17.0.2",
-    "react_native_mqtt": "^1.3.1",
     "react-native": "0.68.1",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.4.5",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "^0.31.1",
@@ -31,7 +32,9 @@
     "react-native-screens": "^3.13.1",
     "react-native-sensors": "^7.3.5",
     "react-native-svg": "^12.3.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react_native_mqtt": "^1.3.1",
     "sp-react-native-mqtt": "^0.5.0"
   },
   "devDependencies": {
