--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-svg-charts": "^5.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react_native_mqtt": "^1.3.1",
-    "sp-react-native-mqtt": "^0.5.0"
+    "sp-react-native-mqtt": "^0.5.0",
+    "victory-native": "^36.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
